<resources>
    <string name="app_name">Living In Christ</string>
    <string name="open_menu">Opened Menu</string>
    <string name="close_menu">Closed Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="popup_plan">This is the page for your daily plans in your life.
    At 12am sharp everyday, the checkboxes will reset. Do these activities at your own time in 24 hours.
        No pressure. If you successfully complete all checkboxes on time, it will be recorded to your score below.
        At the end of the day, it is just a score. Do not worry. This is just to motivate you &#x1F64F;</string>
    <string name="instructions">There is two modes in this game, casual and score. When score mode is selected, you will be graded according
    to your answers and the time you take to complete it. If you select casual mode, no score and no time will be counted.</string>
    <string name="usage">There are 4 main section of this application which are Counter Streak, Daily Plans, Quiz Game and Bible Study. \n\n
    Counter Streak is to keep an integrity check of temptations where most Christians are struggling. \n\n
    Daily Plans is a simple feature for you to keep track of your daily devotional plans. As of now the features are simple but it is  a start.\n\n
    Quiz is just a simple game to test your Biblical Knowledge \n \n
    Bible Study feature is for you to keep track of your study progress in the Bible. It is separated into themes and books where you can organise your study notes as you wish.
    Obviously it is nothing fancy compared to others but better something than nothing.</string>
    <string name="next">Next</string>
    <string name="counter">Counter</string>
    <string name="history">History</string>
    <string name="your_streak">Your Streak</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="worship">Worship</string>
    <string name="bible_study">Bible Study</string>
    <string name="completed_0_times">Completed 0 times</string>
    <string name="submit">Submit</string>
    <string name="score_mode">Score Mode</string>
    <string name="casual_mode">Casual Mode</string>
    <string name="how_to_play">How to Play</string>
    <string name="high_score">High Score</string>
    <string name="question_topic">Question/Topic:</string>
    <string name="answer_explanation">Answer/Explanation:</string>
</resources>